[gd_scene load_steps=5 format=3 uid="uid://cn161y4sauap"]

[ext_resource type="PackedScene" uid="uid://dkxqj3l0xm8uw" path="res://creator/selection/inspector/categories/inspector_category_base.tscn" id="1_ey7au"]
[ext_resource type="Script" path="res://creator/selection/inspector/categories/inspector_model_root.gd" id="2_n83xx"]
[ext_resource type="PackedScene" uid="uid://cyf8lr874knjd" path="res://creator/selection/inspector/primitive/inspector_line_edit_field.tscn" id="3_m65rk"]
[ext_resource type="FontFile" uid="uid://dhpbqmk3ulim4" path="res://ui/common/fonts/montserrat/montserrat_bold.ttf" id="4_7bnhb"]

[node name="InspectorModelRoot" instance=ExtResource("1_ey7au")]
script = ExtResource("2_n83xx")

[node name="Text" parent="CategoryTitle/ToggleButton/Name" index="3"]
text = "MODEL"

[node name="ModelName" parent="Properties/MarginContainer/PropertyList" index="0" instance=ExtResource("3_m65rk")]
visible = false
layout_mode = 2
reset_value = "New Model"
label_text = "Model Name"

[node name="SaveButton" type="Button" parent="Properties/MarginContainer/PropertyList" index="1"]
visible = false
custom_minimum_size = Vector2(256, 30)
layout_mode = 2
theme_override_fonts/font = ExtResource("4_7bnhb")
text = "Save Model"

[node name="LocalButton" type="Button" parent="Properties/MarginContainer/PropertyList" index="2"]
visible = false
custom_minimum_size = Vector2(256, 30)
layout_mode = 2
theme_override_fonts/font = ExtResource("4_7bnhb")
text = "Convert to local model"

[connection signal="value_changed" from="Properties/MarginContainer/PropertyList/ModelName" to="." method="_on_model_name_value_changed"]
[connection signal="pressed" from="Properties/MarginContainer/PropertyList/SaveButton" to="." method="_on_save_button_pressed"]
[connection signal="pressed" from="Properties/MarginContainer/PropertyList/LocalButton" to="." method="_on_convert_to_local_button_pressed"]
